--- a/tools/vscode/launch-demo.json
+++ b/tools/vscode/launch-demo.json
@@ -6,6 +6,7 @@
         "-v",
         "--xgo-src",
         "./",
+        "--sync-with-link",
         "--with-goroot",
         "${env:HOME}/.xgo/go-instrument/go1.20.1",
         // "--debug",
@@ -34,6 +35,7 @@
         "-v",
         "--xgo-src",
         "./",
+        "--sync-with-link",
         "--with-goroot",
         "${env:HOME}/.xgo/go-instrument/go1.20.1",
         // "--debug",
