remove getg, replace runtime.TrapImpl with __xgo_link_set_trap for safety injection

--- a/tools/vscode/launch-demo.json
+++ b/tools/vscode/launch-demo.json
@@ -3,7 +3,7 @@
     {
       "args": [
         "build",
-        "-v",
+        "--log-compile",
         "--xgo-src",
         "./",
         "--sync-with-link",
@@ -32,7 +32,7 @@
     {
       "args": [
         "build",
-        "-v",
+        "--log-compile",
         "--xgo-src",
         "./",
         "--sync-with-link",
