--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,10 +31,10 @@ jobs:
       run: cd runtime && go tool cover --func ../cover-runtime.out
 
     - name: Build Release
-      run: go run ./script/build-release
+      run: go run ./script/build-release --include-install-src --include-local
     
-    # - name: Check Version
-    #   run: ~/.xgo/bin/xgo revision
+    - name: Check Version
+      run: ~/.xgo/bin/xgo revision
 
-    # - name: Check Go Version
-    #   run: ~/.xgo/bin/xgo exec go version
+    - name: Check Go Version
+      run: ~/.xgo/bin/xgo exec go version
