--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -42,6 +42,6 @@ jobs:
 
     - name: Check spelling of files
       uses: crate-ci/typos@master
-      continue-on-error: true
+      continue-on-error: false
       with: 
         files: ./
