--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,8 +28,11 @@ jobs:
     - name: Test
       run: go run ./script/run-test --reset-instrument --debug -v -cover -coverpkg github.com/xhd2015/xgo/runtime/... -coverprofile cover.out
 
+    - name: Merge Coverages
+      run: go run ./script/cover merge ./cover-runtime.out ./cover-runtime-sub.out -o cover-runtime-merged.out
+
     - name: Print coverage
-      run: cd runtime && go tool cover --func ../cover-runtime.out
+      run: cd runtime && go tool cover --func ../cover-runtime-merged.out
 
     - name: Build Release
       run: go run ./script/build-release --include-install-src --include-local
