--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,7 +29,7 @@ jobs:
         files: ./
       
     - name: Build
-      run: go build -v ./cmd/...
+      run: go build -o /dev/null -v ./cmd/xgo
 
     - name: Test
       run: go run ./script/run-test --reset-instrument --debug -v -cover -coverpkg github.com/xhd2015/xgo/runtime/... -coverprofile cover.out
