--- a/.github/workflows/nightly-test.yml
+++ b/.github/workflows/nightly-test.yml
@@ -28,7 +28,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           path: xgo
-          ref: master
+          ref: fix-const-expr-type-recognition
 
       - name: Set up Go
         uses: actions/setup-go@v4
@@ -39,6 +39,7 @@ jobs:
         run: |
           cd xgo
           go install ./cmd/xgo
+          xgo exec --reset-instrument --log-debug go version
           xgo revision
       
       - uses: actions/checkout@v4
@@ -48,7 +49,11 @@ jobs:
 
       - name: Test pocketbase/pocketbase
         continue-on-error: true
-        run: cd pocketbase/pocketbase && xgo test -v ./...
+        run: |
+          cd pocketbase/pocketbase
+          xgo test -v ./...
+          echo $? > test-exit-code.txt
+          echo "exit code is $(cat test-exit-code.txt)"
 
       - uses: actions/checkout@v4
         with:
@@ -57,7 +62,12 @@ jobs:
 
       - name: Test gohugoio/hugo
         continue-on-error: true
-        run: cd gohugoio/hugo && xgo test -v ./...
+        run: |
+          cd gohugoio/hugo
+          xgo test -v ./...
+          echo $? > test-exit-code.txt
+          echo "exit code is $?"
+          echo "exit code is $(cat test-exit-code.txt)"
 
       - uses: actions/checkout@v4
         with:
@@ -66,5 +76,15 @@ jobs:
 
       - name: Test kubernetes/kubernetes
         continue-on-error: true
-        run: cd kubernetes/kubernetes && xgo test -v ./...
+        run: |
+          cd kubernetes/kubernetes 
+          xgo test -v ./...
+          echo $? > test-exit-code.txt
+          echo "exit code is $(cat test-exit-code.txt)"
         
+      - name: Summary
+        run: |
+         echo "exit code:"
+         echo "  pocketbase/pocketbase: $(cat pocketbase/pocketbase/test-exit-code.txt)"
+         echo "  gohugoio/hugo:         $(cat gohugoio/hugo/test-exit-code.txt)"
+         echo "  kubernetes/kubernetes: $(cat kubernetes/kubernetes/test-exit-code.txt)"
