make --trap-stdlib default with running xgo test, skip unexported stdlib functions

--- a/.github/workflows/go-compatible.yml
+++ b/.github/workflows/go-compatible.yml
@@ -1,7 +1,7 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
-name: Go
+name: Go Compatible
 
 on:
   push:
@@ -11,11 +11,11 @@ on:
 
 jobs:
 
-  tests-with-coverage:
+  tests-with-older-go-versions:
     strategy:
       matrix:
         os: [ ubuntu-latest]
-        go: [ '1.22' ]
+        go: [ '1.18' ,'1.20','1.21']
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
@@ -26,10 +26,4 @@ jobs:
         go-version: '${{ matrix.go }}'
 
     - name: Test
-      run: go run ./script/run-test --reset-instrument --debug -v -cover -coverpkg github.com/xhd2015/xgo/runtime/... -coverprofile cover.out
-
-    - name: Merge Coverages
-      run: go run ./cmd/go-tool-coverage merge ./cover-runtime.out ./cover-runtime-sub.out -o cover-runtime-merged.out --exclude-prefix github.com/xhd2015/xgo/runtime/test
-
-    - name: Print coverage
-      run: cd runtime && go tool cover --func ../cover-runtime-merged.out
+      run: go run ./script/run-test --reset-instrument --debug -v
