--- a/.github/workflows/nightly-test.yml
+++ b/.github/workflows/nightly-test.yml
@@ -90,9 +90,40 @@ jobs:
           repository: gohugoio/hugo
           path: gohugoio/hugo
 
+      - name: Install Ruby
+        uses: ruby/setup-ruby@5f19ec79cedfadb78ab837f95b87734d0003c899
+        with:
+          ruby-version: "2.7"
+          bundler-cache: true #
+      - name: Install Python
+        uses: actions/setup-python@82c7e631bb3cdc910f68e0081d67478d79c6982d
+        with:
+          python-version: "3.x"
+      - name: Install Mage
+        run: go install github.com/magefile/mage@v1.15.0
+      - name: Install asciidoctor
+        uses: reitzig/actions-asciidoctor@03fcc74cd74880b697950c4930c9ec8a67c69ecc
+      - name: Install docutils
+        run: |
+          pip install docutils
+          rst2html --version
       - name: Test gohugoio/hugo
         continue-on-error: true
         run: |
+          set -x
+          echo "---Installing pandoc---"
+          sudo apt-get update -y
+          sudo apt-get install -y pandoc
+          export GO111MODULE=on
+          export SASS_VERSION=1.63.2
+          export DART_SASS_SHA_LINUX=3ea33c95ad5c35fda6e9a0956199eef38a398f496cfb8750e02479d7d1dd42af
+          echo "---Install Dart Sass version ${SASS_VERSION} ---"
+          curl -LJO "https://github.com/sass/dart-sass/releases/download/${SASS_VERSION}/dart-sass-${SASS_VERSION}-linux-x64.tar.gz";
+          echo "${DART_SASS_SHA_LINUX}  dart-sass-${SASS_VERSION}-linux-x64.tar.gz" | sha256sum -c
+          tar -xvf "dart-sass-${SASS_VERSION}-linux-x64.tar.gz"
+          echo "$GOBIN"
+          echo "$GITHUB_WORKSPACE/dart-sass/" >> $GITHUB_PATH
+          export PATH="$GITHUB_WORKSPACE/dart-sass:$PATH"
           source util.sh
           cd gohugoio/hugo
           xgo test -v ./...
