--- a/.github/workflows/go-next.yml
+++ b/.github/workflows/go-next.yml
@@ -24,9 +24,10 @@ jobs:
       run: |
         curl -fsSL -o go.tar.gz "https://go.dev/dl/go${{matrix.go}}.linux-amd64.tar.gz"
         mkdir setup
+        mkdir setup/gopath
         tar -C setup -xzf go.tar.gz
         ls setup
         GOROOT=$PWD/setup/go PATH=$PWD/setup/go/bin:$PATH go version
     
     - name: Test
-      run: GOROOT=$PWD/setup/go PATH=$PWD/setup/go/bin:$PATH go run ./script/run-test --reset-instrument --debug -v
+      run: GOROOT=$PWD/setup/go GOPATH=$PWD/setup/gopath PATH=$PWD/setup/go/bin:$PWD/setup/gopath/bin:$PATH go run ./script/run-test --install-xgo --reset-instrument --debug -v
