--- a/.github/workflows/go-compatible.yml
+++ b/.github/workflows/go-compatible.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest]
-        go: [ '1.17','1.18','1.19','1.20','1.21']
+        go: [ '1.17','1.18','1.19','1.20','1.21','1.22','1.23']
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
@@ -26,4 +26,4 @@ jobs:
         go-version: '${{ matrix.go }}'
 
     - name: Test
-      run: go run ./script/run-test --install-xgo --reset-instrument --debug -v
+      run: go run ./script/run-test --install-xgo --with-setup --reset-instrument --debug -v
