--- a/.github/workflows/go-windows.yml
+++ b/.github/workflows/go-windows.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         os: [ windows-latest ]
-        go: [ '1.22' ]
+        go: [ '1.24' ]
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
@@ -26,4 +26,4 @@ jobs:
         go-version: '${{ matrix.go }}'
 
     - name: Test
-      run: go run ./script/run-test --install-xgo --reset-instrument --debug -v
+      run: go run ./script/run-test --install-xgo --with-setup --reset-instrument --debug -v
