--- a/.github/workflows/go-next.yml
+++ b/.github/workflows/go-next.yml
@@ -30,4 +30,4 @@ jobs:
         GOROOT=$PWD/setup/go PATH=$PWD/setup/go/bin:$PATH go version
     
     - name: Test
-      run: GOROOT=$PWD/setup/go GOPATH=$PWD/setup/gopath PATH=$PWD/setup/go/bin:$PWD/setup/gopath/bin:$PATH go run ./script/run-test --install-xgo --with-setup --reset-instrument --debug -v
+      run: GOROOT=$PWD/setup/go GOPATH=$PWD/setup/gopath PATH=$PWD/setup/go/bin:$PWD/setup/gopath/bin:$PATH go run ./script/run-test --install-xgo --with-setup --reset-instrument --log-debug -v
